hphp/test/zend/good/ext/calendar/tests/gregoriantojd.php
<?php
echo gregoriantojd( 0, 0,    0). "\n";
echo gregoriantojd( 1, 1, 1582). "\n";
echo gregoriantojd(10, 5, 1582). "\n";
echo gregoriantojd( 1, 1, 1970). "\n";
echo gregoriantojd( 1, 1, 2999). "\n";
?>